--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"MyLoveIzhma.aternos.me",
-	"port": "52000",
-	"name": "makar bot"
+	"ip":"game6.falixserver.net",
+	"port": "20417",
+	"name": "Mesiac"
 }
